<resources>
    <string name="app_name">QuizApp</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="date">Set date of birth</string>
    <string name="settings">Settings</string>
    <string name="fast_game">Fast game</string>
    <string name="invite_friend">Invite friend</string>
    <string name="categories">Categories</string>
    <string name="new_quiz">Make own quiz</string>
    <string name="my_quizzes">Own quizzes</string>
    <string name="challenges">Challenges</string>
    <string name="currency">Currency: %1$s</string>
    <string name="level">Level: %1$s</string>
    <string name="rank">Rank: </string>
    <string name="account">Account</string>
    <string name="change">Change</string>
    <string name="friends">Friends</string>
    <string name="wyloguj">Sign out</string>
    <string name="no_connection">Connection lost.</string>
    <string name="email_verified">%1$s %2$b</string>
    <string name="help_message">If you have any questions heads up under this email: %1$s</string>
    <string name="info_message">Application have been created as small student project. Creators: %1$s %2$s %3$s</string>
    <string name="question_number">Question %1$d:</string>
    <string name="right_answer">Right answer:</string>
    <string name="wrong_answer">Wrong answer:</string>
    <string name="add_quiz">Add quiz</string>
    <string name="username_info">Username is not set yet&#8230;</string>
    <string name="upload_info">Upload %1$i&#37;</string>
    <string name="question_no">Question %1$i / %2$i</string>
    <string name="q_no">%1$i / %2$i</string>
    <string name="next">Next</string>
</resources>
