<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.com.fireflies.quizapp.RegisterActivity">

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:minWidth="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/date_button"
        android:layout_width="wrap_content"
        android:minWidth="150dp"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/register_button"/>

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="wrap_content"
        android:minWidth="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/date_button"/>

    <EditText
        android:id="@+id/password_edit"
        android:layout_width="wrap_content"
        android:minWidth="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/email_edit"/>

    <EditText
        android:id="@+id/login_edit"
        android:layout_width="wrap_content"
        android:minWidth="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/password_edit"/>

</android.support.constraint.ConstraintLayout>
