<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.com.fireflies.quizapp.LoginActivity">

    <EditText
        android:id="@+id/login_edit"
        android:layout_width="wrap_content"
        android:minWidth="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:text="admin"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <EditText
        android:id="@+id/password_edit"
        android:layout_width="wrap_content"
        android:minWidth="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:text="password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_edit"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:minWidth="150dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:minWidth="150dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>
