<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.com.fireflies.quizapp.UserPanelActivity">

    <include
        android:id="@+id/user_bar"
        layout="@layout/user_bar"></include>

    <LinearLayout
        android:id="@+id/linear_01"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/user_bar">

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"

            android:id="@+id/fast_game_card"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_margin="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:background="@drawable/circle_background_red"
                    android:src="@drawable/ic_android_black_24dp"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:text="@string/fast_game" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"

            android:id="@+id/invite_friend_card"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_margin="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:background="@drawable/circle_background_purple"
                    android:src="@drawable/ic_android_black_24dp"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:text="@string/invite_friend" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_02"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/linear_01">

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"

            android:id="@+id/categories_card"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_margin="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:background="@drawable/circle_background_yellow"
                    android:src="@drawable/ic_android_black_24dp"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:text="@string/categories" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"

            android:id="@+id/new_quiz_card"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_margin="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:background="@drawable/circle_background_green"
                    android:src="@drawable/ic_android_black_24dp"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:text="@string/new_quiz" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_03"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/linear_02">

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"

            android:id="@+id/my_quizzes_card"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_margin="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:background="@drawable/circle_background_pink"
                    android:src="@drawable/ic_android_black_24dp"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:text="@string/my_quizzes" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"

            android:id="@+id/challenges_card"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_margin="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:background="@drawable/circle_background_violet"
                    android:src="@drawable/ic_android_black_24dp"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:text="@string/challenges" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
